Prevent line breaks in code in paragraphs

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -34,6 +34,10 @@ a {
 
 p {
   margin: 2.0rem 0 2.0rem 0;
+
+  code {
+    white-space: nowrap;
+  }
 }
 
 h1,
@@ -48,7 +52,7 @@ h6 {
   margin: 6.4rem 0 3.2rem 0;
 
   a {
-    color: $alt-fg-color; 
+    color: $alt-fg-color;
   }
 }
 
